--- a/02-Html/result/forms/src/components/ReactHookForm/FirstQuestion/styles.scss
+++ b/02-Html/result/forms/src/components/ReactHookForm/FirstQuestion/styles.scss
@@ -30,7 +30,7 @@
 
     button {
       width: 150px;
-      margin-top: 50px;
+      margin-top: 30px;
       padding: 10px;
       color: black;
       border-radius: 5px;
@@ -42,4 +42,9 @@
       opacity: 0.5;
     }
   }
+}
+
+.error-span {
+  margin-top: 10px;
+  color: red
 }
