--- a/03-CSS/result/material/src/components/OrdersChart/style.scss
+++ b/03-CSS/result/material/src/components/OrdersChart/style.scss
@@ -1,4 +1,33 @@
 .order-charts {
-  max-width: 400px;
+  .css-46bh2p-MuiCardContent-root:last-child {
+    padding: 0;
+  }
 
+  .tooltip {
+    background: #8ad78a;
+    color: white;
+    padding: 12px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    opacity: 0.9;
+    outline: none;
+    div:nth-child(1) {
+      font-size: 9px;
+      margin-bottom: 4px;
+    }
+  }
+  .header {
+    padding-left: 16px;
+    h2 {
+      padding-top: 10px;
+      line-height: 0;
+      font-weight: 400;
+      color: rgb(55, 55, 60);
+      font-size: 18px;
+    }
+    div {
+      font-size: 14px;
+      color: rgb(133, 149, 166);
+    }
+  }
 }
